# final_project

./: .cproject  .gitignore  ARM_CAN_PROTOCOL.md  BOARD1_FIRMWARE_NOTES.md  Board2_CAN_Protocol.md  Board3_CAN_Protocol.md  CAN_PROTOCOL_BOARD1.md  PROJECT_ONBOARDING.md  README.md  SERVER_CAN_FEEDBACK_COMPACT_UPDATE.md  aruco marker list.md  aruco_test.py  board1_test  board1_virtual_can_test.c  compile_flags.txt  final_project_presentation2 copy.json  final_project_presentation2.json  ㅊㅌㅋㅊㅌㅋ.md  구현계획서.md  데모최종버전.json  일지.md  주행파트 일지.md  쵲오.json
.arduino-cli/: arduino-cli.yaml
Debug/: makefile  objects.list  roscue_arm.elf  roscue_arm.list  roscue_arm.map
arduino_board2_tb6600/: arduino_board2_tb6600.ino
arm_can_bridge/: package.xml  setup.py
arm_task_server/: package.xml  setup.cfg  setup.py
arm_task_server/arm_task_server/: __init__.py  arm_task_server_node.py
arm_task_server/config/: arm_tasks.yaml
arm_task_server/launch/: arm_task_server.launch.py
arm_task_server/resource/: arm_task_server
arm_task_server/test/: test_arm_task_server.py  test_copyright.py
board1_f411ceu6/: Board1_CAN_Protocol_Integrated_FINAL.md  Makefile  PATCH_NOTES_2026-07-01.md  PATCH_NOTES_HW_STEPPER_2026-07-01.md  PATCH_NOTES_LIMIT_PINS_2026-07-01.md  PATCH_NOTES_PINMAP_2026-07-01.md  README.md  adc.c  decode_board1_feedback.py  device_driver.h  exception.c  led.c  main.c  mcp2515.c  send_board1_4axis_point.py  spi.c
board2_f411re/: Makefile  PATCH_NOTES_2026-07-01.md  PATCH_NOTES_HW_STEPPER_2026-07-01.md  PATCH_NOTES_LIMIT_PIN_2026-07-01.md  README.md  README_BOARD2_F411RE_BASE_FINAL_TEST.md  i2c.c  key.c  led.c  macro.h  main.c  mcp2515.c  spi.c  timer.c  uart.c
board3_f411re/: Makefile  PATCH_NOTES_2026-07-01.md  PATCH_NOTES_HW_STEPPER_2026-07-01.md  PATCH_NOTES_PINMAP_2026-07-01.md  README_BOARD3_F411RE_PRE_HW.md  gripper_shared.h  main.c  spi.c
central_bringup/: package.xml  setup.py
docs/: ARM_CAN_PROTOCOL.md  (+10 more)
final_project_presentation2/: README.md  package.xml  setup.cfg  setup.py
final_project_presentation2/config/: final_project_presentation2.json
final_project_presentation2/final_project_presentation2/: __init__.py  arm_executor.py  aruco_tracker.py  board_status.py  config_store.py  control_core.py  main_node.py  watchdog_node.py  web_app.py  workflow_core.py
final_project_presentation2/launch/: final_project_presentation2.launch.py  final_project_presentation2_watchdog.launch.py
final_project_presentation2/static/: app.css  app.js  index.html
final_project_presentation2/test/: test_arm_executor.py  test_aruco_tracker.py  test_board_status.py  test_config_store.py  test_control_core.py  test_pose_adapter.py  test_watchdog_core.py  test_web_app.py  test_workflow_core.py
release/Scorpy-driving_vic_native_5f_fix_20260713/mission_manager/: package.xml
release/Scorpy-driving_vic_native_5f_fix_20260713/mission_manager/config/: action_servers.yaml  locations.yaml  mission_flow.yaml
release/Scorpy-driving_vic_native_5f_fix_20260713/mission_manager/launch/: mission_manager.launch.py
release/Scorpy-driving_vic_native_5f_fix_20260713/mission_manager/mission_manager/: mission_manager_node.py  send_demo_mission.py  send_mission.py
release/Scorpy-driving_vic_native_5f_fix_20260713/mission_manager/test/: test_native_floor_transition.py
release/Scorpy-driving_vic_native_5f_fix_20260713/vicpinky_interfaces/: CMakeLists.txt  package.xml
release/Scorpy-driving_vic_native_5f_fix_20260713/vicpinky_interfaces/action/: ExecuteMission.action  RunTask.action
release/Scorpy-driving_vic_native_5f_fix_20260713/vicpinky_interfaces/msg/: MissionStatus.msg
release/Scorpy-driving_vic_native_5f_fix_20260713/vicpinky_nav_adapter/: package.xml  setup.cfg  setup.py
release/Scorpy-driving_vic_native_5f_fix_20260713/vicpinky_nav_adapter/vicpinky_nav_adapter/: __init__.py  nav_adapter_node.py
release/vicpinky_final_integration/pj/src/central_bringup/: package.xml  setup.cfg
release/vicpinky_final_integration/pj/src/central_bringup/launch/: driving_only_system.launch.py  final_system.launch.py
release/vicpinky_final_integration/pj/src/mock_task_servers/: package.xml  setup.cfg
release/vicpinky_final_integration/pj/src/mock_task_servers/config/: mock_tasks.yaml
release/vicpinky_final_integration/pj/src/mock_task_servers/launch/: mock_servers.launch.py
release/vicpinky_final_integration/pj/src/mock_task_servers/mock_task_servers/: mock_task_servers_node.py
release/vicpinky_final_integration/pj/src/vicpinky_interfaces/: package.xml
release/vicpinky_final_integration/pj/src/vicpinky_interfaces/action/: RunTask.action
release/vicpinky_final_integration/pj/src/vicpinky_interfaces/msg/: DetectedMarker.msg  MissionStatus.msg
src/board1_simulator/: package.xml  setup.cfg  setup.py
src/board1_simulator/board1_simulator/: __init__.py  board1_simulator_node.py  model.py
src/board1_simulator/config/: board1_simulator.yaml
src/board1_simulator/docs/: BOARD1_SIMULATOR_NEXT_STEPS.md  BOARD1_SIMULATOR_README.md
src/board1_simulator/launch/: board1_simulator.launch.py
src/board1_simulator/test/: test_board1_simulator_model.py
src/central_bringup/: package.xml  setup.py
src/central_bringup/launch/: arm_hardware_bringup.launch.py  bringup_mock.launch.py
src/roscue_arm_pick/: package.xml  setup.py
src/roscue_arm_pick/config/: fixed_poses.yaml  gripper_profiles.yaml  task_sequence.yaml  task_waypoints.yaml
src/roscue_arm_pick/launch/: arm_task_executor.launch.py
src/roscue_arm_pick/roscue_arm_pick/: config_validation.py  fixed_joint_test.py  task_executor_node.py
src/roscue_arm_pick/test/: test_config_validation.py  test_task_executor_behavior.py
vicpinky_final_bringup/: package.xml  setup.py
vicpinky_final_bringup/launch/: final_robot.launch.py
vicpinky_gui/: package.xml
vicpinky_gui/launch/: vicpinky_gui.launch.py  vicpinky_gui_board3_only.launch.py
vicpinky_gui/resource/: vicpinky_gui
vicpinky_gui/static/: app.css  app.js  index.html
vicpinky_gui/test/: test_bridge_joint_limits.py
vicpinky_gui/vicpinky_gui/: __init__.py  gui_node.py
(+554 files in other folders)
