<?xml version="1.0"?>
<package format="3">
  <name>arm_task_server</name>
  <version>0.0.0</version>
  <description>Semantic arm task action servers for VicPinky missions</description>
  <maintainer email="seongjun000313@gmail.com">sj</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>ament_index_python</depend>
  <depend>control_msgs</depend>
  <depend>rclpy</depend>
  <depend>trajectory_msgs</depend>
  <depend>vicpinky_interfaces</depend>

  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
