<?xml version="1.0"?>
<package format="3">
  <name>central_bringup</name>
  <version>0.0.0</version>
  <description>Bringup launch files for VicPinky central server</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>mock_task_servers</exec_depend>
  <exec_depend>mission_manager</exec_depend>
  <exec_depend>vicpinky_nav_adapter</exec_depend>
  <exec_depend>vicpinky_gui</exec_depend>
  <exec_depend>arm_can_bridge</exec_depend>
  <exec_depend>roscue_arm_description</exec_depend>
  <exec_depend>roscue_arm_moveit_config</exec_depend>
  <exec_depend>roscue_arm_pick</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
